--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,7 +47,7 @@ ul {
   display: inline-block;
 }
 
-#container {
+.container {
   width: 100%;
   text-align: center;
   min-height: 100vh;
@@ -69,28 +69,28 @@ ul {
   z-index: 20;
 }
 
-.btn-esp {
+.btnEsp {
   background-color: var(--clr-purple);
   background-image: radial-gradient(var(--clr-purple), var(--clr-darkpurple));
 }
 
-.btn-esp:hover {
+.btnEsp:hover {
   background-image: none;
   background-color: var(--clr-darkpurple);
 }
 
-.btn-rdv {
+.btnRdv {
   background-color: var(--clr-btn-pink);
   background-image: radial-gradient(var(--clr-btn-pink), #f05f76);
 }
 
-.btn-rdv:hover {
+.btnRdv:hover {
   background-image: none;
   background-color: #f05f76;
 }
 
-.btn-esp:active,
-.btn-rdv:active {
+.btnEsp:active,
+.btnRdv:active {
   transform: translateY(4px);
 }
 
@@ -99,3 +99,379 @@ ul {
   flex-wrap: wrap;
   justify-content: center;
 }
+
+/*Headings*/
+
+#headings {
+  color: var(--clr-headings);
+  padding: 1rem;
+  width: 100%;
+}
+
+#headings h1 {
+  font-family: var(--ff-headings);
+  text-shadow: var(--text-shadow);
+  font-size: 3rem;
+  line-height: 1.5;
+  letter-spacing: 0.25rem;
+}
+
+#headings h2 {
+  font-family: var(--ff-headings);
+  line-height: 1.25;
+  font-size: 2rem;
+  margin-top: 2rem;
+  letter-spacing: 0.2rem;
+}
+
+.subheading {
+  font-family: var(--ff-headings);
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+  letter-spacing: 0.2rem;
+}
+
+.sectionHeading {
+  font-family: var(--ff-headings);
+  text-shadow: var(--text-shadow);
+  font-size: 3rem;
+  margin: 2rem;
+  letter-spacing: 0.3rem;
+}
+
+.profileHeading {
+  font-family: var(--ff-headings);
+  text-shadow: var(--text-shadow);
+  letter-spacing: 0.1rem;
+}
+
+.location {
+  margin-bottom: 3rem;
+}
+
+
+/*All*/
+
+
+
+/*Qui Suis-Je*/
+
+.purple-container {
+  background-color: var(--clr-purple);
+  width: 100%;
+  border-radius: 2rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 2rem 1rem;
+}
+
+#profile-pic {
+  max-width: 70%;
+  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.4);
+  border-radius: 1rem;
+}
+
+#about * {
+  padding: 1rem;
+}
+
+/*PRESTATIONS*/
+
+#prestations {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.grid-item {
+  border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+  margin: 1rem 0;
+}
+
+#prestations .grid-item {
+  min-height: 50vh;
+}
+
+.grid-item * {
+  padding: 0.75rem;
+}
+
+.hidden {
+  display: none;
+}
+
+.prestations-image {
+  border-radius: 50%;
+  height: 25vh;
+  width: 25vh;
+  object-fit: cover;
+  padding: 0;
+}
+
+#massage-bebe {
+  background-color: var(--clr-massage-bebe);
+}
+
+#massage-ecole {
+  background-color: var(--clr-ecole);
+}
+
+#massage-ecole ol > li,
+#massage-bebe ul > li {
+  padding: 0;
+}
+
+/*Bons Cadeaux*/
+
+#grid-bc {
+ display: flex;
+ flex-direction: column;
+ background-color: var(--clr-light-purple);
+ padding: 1rem;
+ border-radius: 2rem;
+}
+
+#grid-bc .grid-item {
+  border: 4px solid var(--clr-purple);
+  color: var(--clr-purple);
+  background-color: #ffffff;
+}
+
+.bc-img {
+  width: 50%;
+  color: red;
+}
+
+
+/*Contact Section*/
+
+input::placeholder,
+textarea::placeholder
+ {
+  color: var(--clr-headings);
+  opacity: 0.6;
+}
+
+.fb-logo {
+  background-color: #ffffff;
+}
+
+.sm-logo {
+  width: 2rem;
+  margin: 1rem;
+}
+
+.contact-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.form-group label {
+  margin: 1rem;
+  font-size: 1.5rem;
+}
+
+.form-group input,
+textarea {
+  border-radius: 2rem;
+  border: none;
+  font-size: inherit;
+  padding: 0.5rem 1.5rem;
+}
+
+.contact-group img {
+  width: 2.5rem;
+}
+
+.contact-group {
+  border-radius: 2rem;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  padding: 1rem;
+  margin: 1rem 0;
+  text-align: center;
+  width: 100%;
+}
+
+.blue {
+  background-color: var(--clr-papa);
+}
+
+.turquoise {
+  background-color: var(--clr-yoga-kids);
+}
+
+.pink {
+  background-color: var(--clr-massage-femme-enceinte);
+}
+
+.light-purple {
+  background-color: var(--clr-light-purple);
+}
+
+#contact a:hover {
+  font-weight: bold;
+}
+
+#sm-group {
+  display: flex;
+  flex-direction: row;
+}
+
+.res-soc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.res-soc span {
+  display: none;
+}
+
+
+
+/*Footer*/
+
+#footer {
+  display: flex;
+  background-color: var(--clr-darkpurple);
+  margin-top: 5vh;
+  height: 8vh;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  font-size: 1rem;
+}
+
+#footer a {
+  color: #ffffff;
+}
+
+#footer a:hover {
+  opacity: 0.5;
+}
+
+/*Thanks Page*/
+
+.space-between {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+/*MEDIA QUERIES*/
+
+/*Extra Small, Mobile*/
+@media (min-width: 500px) {
+  #profile-pic {
+    max-width: 50%;
+  }
+
+  h1.profile-heading {
+    font-size: 2.5rem;
+  }
+
+  #landing-page {
+    background-size: 60%;
+  }
+}
+
+/* Small Devices, Tablets */
+@media (min-width: 768px) {
+  #headings {
+    width: 60%;
+  }
+
+  #headings h1 {
+    font-size: 5rem;
+  }
+
+
+  .location {
+    width: 80%;
+    font-size: 1.75rem;
+    margin-bottom: 4rem;
+  }
+
+  #prestations-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1rem;
+    margin: 1rem;
+  }
+
+  #grid-bc {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 1rem;
+    margin: 1rem;
+  }
+
+  .contact-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: flex-start;
+  }
+
+  .form-group {
+    padding: 0.5rem 2rem;
+  }
+}
+
+/* Medium Devices, Desktops */
+@media (min-width: 992px) {
+
+  #headings {
+    margin-left: 5rem;
+  }
+
+  #qui-suis-je {
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+  }
+
+  #photo-container {
+    order: 1;
+  }
+
+  .section-heading {
+    font-size: 4rem;
+    margin-top: 4rem;
+  }
+
+  #prestations-grid {
+    column-gap: 2rem;
+    margin: 2rem;
+  }
+  .contact-group {
+    width: 80%;
+  }
+
+  #sm-group {
+    flex-direction: column;
+  }
+
+  .res-soc span {
+    display: flex;
+  }
+}
+
