--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,7 +30,7 @@
 }
 
 body {
-  font-family: var(--ff-text-primary);
+  font-family: var(--ff-text-headings);
   font-size: 1.25rem;
   color: var(--clr-headings);
 }
@@ -52,6 +52,8 @@ ul {
   text-align: center;
   min-height: 100vh;
 }
+
+/*Button Styles*/
 
 .btn {
   border-radius: 2em;
@@ -94,11 +96,7 @@ ul {
   transform: translateY(4px);
 }
 
-.buttons {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
+
 
 /*Headings*/
 
@@ -176,9 +174,6 @@ ul {
   margin: 1rem 0;
 }
 
-#prestations .grid-item {
-  min-height: 50vh;
-}
 
 .grid-item * {
   padding: 0.75rem;
@@ -188,21 +183,12 @@ ul {
   display: none;
 }
 
-.prestations-image {
-  border-radius: 50%;
-  height: 25vh;
-  width: 25vh;
-  object-fit: cover;
-  padding: 0;
+#prestations .grid-item {
+  min-height: 50vh;
 }
 
-#massage-bebe {
-  background-color: var(--clr-massage-bebe);
-}
 
-#massage-ecole {
-  background-color: var(--clr-ecole);
-}
+
 
 #massage-ecole ol > li,
 #massage-bebe ul > li {
