--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,8 +96,6 @@ ul {
   transform: translateY(4px);
 }
 
-
-
 /*Headings*/
 
 #headings {
@@ -141,7 +139,6 @@ ul {
   margin-bottom: 3rem;
 }
 
-
 /*All*/
 
 .purple-container {
@@ -174,7 +171,6 @@ ul {
   margin: 1rem 0;
 }
 
-
 .grid-item * {
   padding: 0.75rem;
 }
@@ -187,9 +183,6 @@ ul {
   min-height: 50vh;
 }
 
-
-
-
 #massage-ecole ol > li,
 #massage-bebe ul > li {
   padding: 0;
@@ -201,105 +194,13 @@ ul {
   color: red;
 }
 
-
 /*Contact Section*/
 
 input::placeholder,
-textarea::placeholder
- {
+textarea::placeholder {
   color: var(--clr-headings);
   opacity: 0.6;
 }
-
-.fb-logo {
-  background-color: #ffffff;
-}
-
-.sm-logo {
-  width: 2rem;
-  margin: 1rem;
-}
-
-.contact-details {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-}
-
-.form-group label {
-  margin: 1rem;
-  font-size: 1.5rem;
-}
-
-.form-group input,
-textarea {
-  border-radius: 2rem;
-  border: none;
-  font-size: inherit;
-  padding: 0.5rem 1.5rem;
-}
-
-.contact-group img {
-  width: 2.5rem;
-}
-
-.contact-group {
-  border-radius: 2rem;
-  align-items: center;
-  justify-content: center;
-  font-size: 1rem;
-  padding: 1rem;
-  margin: 1rem 0;
-  text-align: center;
-  width: 100%;
-}
-
-.blue {
-  background-color: var(--clr-papa);
-}
-
-.turquoise {
-  background-color: var(--clr-yoga-kids);
-}
-
-.pink {
-  background-color: var(--clr-massage-femme-enceinte);
-}
-
-.light-purple {
-  background-color: var(--clr-light-purple);
-}
-
-#contact a:hover {
-  font-weight: bold;
-}
-
-#sm-group {
-  display: flex;
-  flex-direction: row;
-}
-
-.res-soc {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.res-soc span {
-  display: none;
-}
-
-
-
-/*Footer*/
-
-
 
 /*Thanks Page*/
 
@@ -309,9 +210,7 @@ textarea {
   justify-content: space-between;
 }
 
-
 /*MEDIA QUERIES*/
-
 
 /* Small Devices, Tablets */
 @media (min-width: 768px) {
@@ -322,7 +221,6 @@ textarea {
   #headings h1 {
     font-size: 5rem;
   }
-
 
   .location {
     width: 80%;
@@ -337,27 +235,18 @@ textarea {
     margin: 1rem;
   }
 
- 
-
   .contact-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: flex-start;
   }
-
-  .form-group {
-    padding: 0.5rem 2rem;
-  }
 }
 
 /* Medium Devices, Desktops */
 @media (min-width: 992px) {
-
   #headings {
     margin-left: 5rem;
   }
-
-
 
   .section-heading {
     font-size: 4rem;
@@ -368,16 +257,4 @@ textarea {
     column-gap: 2rem;
     margin: 2rem;
   }
-  .contact-group {
-    width: 80%;
-  }
-
-  #sm-group {
-    flex-direction: column;
-  }
-
-  .res-soc span {
-    display: flex;
-  }
 }
-
