--- a/styles/BonsCadeaux.module.css
+++ b/styles/BonsCadeaux.module.css
@@ -4,6 +4,7 @@
     background-color: var(--clr-light-purple);
     padding: 1rem;
     border-radius: 2rem;
+    box-shadow: var(--box-shadow);
    }
 
 
@@ -15,8 +16,15 @@
   
 .grid {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
       column-gap: 1rem;
       margin: 1rem;
     }
+}
+
+/* Large Devices, Wide Screens */
+@media (min-width: 1200px) {
+  .grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
