--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,7 @@
   --ff-text-primary: "Montserrat", sans-serif;
 
   --text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  --box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 * {
@@ -30,7 +31,7 @@
 }
 
 body {
-  font-family: var(--ff-text-headings);
+  font-family: var(--ff-headings);
   font-size: 1.25rem;
   color: var(--clr-headings);
 }
@@ -151,6 +152,7 @@ ul {
   align-items: center;
   text-align: center;
   padding: 2rem 1rem;
+  box-shadow: var(--box-shadow);
 }
 
 /*PRESTATIONS*/
@@ -188,11 +190,7 @@ ul {
   padding: 0;
 }
 
-/*Bons Cadeaux*/
-.bc-img {
-  width: 50%;
-  color: red;
-}
+
 
 /*Contact Section*/
 
@@ -248,8 +246,8 @@ textarea::placeholder {
     margin-left: 5rem;
   }
 
-  .section-heading {
-    font-size: 4rem;
+  .sectionHeading {
+    font-size: 5rem;
     margin-top: 4rem;
   }
 
