--- a/styles/globals.css
+++ b/styles/globals.css
@@ -200,13 +200,6 @@ textarea::placeholder {
   opacity: 0.6;
 }
 
-/*Thanks Page*/
-
-.space-between {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
 
 /*MEDIA QUERIES*/
 
@@ -218,6 +211,10 @@ textarea::placeholder {
 
   #headings h1 {
     font-size: 5rem;
+  }
+
+  .subheading {
+    font-size: 2.5rem;
   }
 
   .location {
