--- a/styles/globals.css
+++ b/styles/globals.css
@@ -160,7 +160,7 @@ ul {
 #prestations {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .grid-item {
@@ -168,12 +168,13 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   padding: 1rem 0;
   margin: 1rem 0;
 }
 
-.grid-item * {
+.grid-item p,
+.grid-item details {
   padding: 0.75rem;
 }
 
@@ -251,5 +252,9 @@ textarea::placeholder {
   #prestations-grid {
     column-gap: 2rem;
     margin: 2rem;
+  }
+
+  .grid-item p {
+    padding: 1rem 2rem;
   }
 }
