--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,91 +1,88 @@
 .mainNav {
-    display: flex;
-    width: 100%;
-    height: 14vh;
-    justify-content: flex-end;
-    align-items: center;
-    box-shadow: var(--text-shadow);
-    background-color: var(--clr-purple);
-  }
-  
-  .navLink {
-    font-family: var(--ff-);
-    color: #ffffff;
-    font-size: 2rem;
-    padding: 0 1rem;
-    text-align: center;
-    text-shadow: var(--text-shadow);
-  }
-  
-  .navLink:hover {
-    border-bottom: 8px solid var(--clr-purple);
-    -webkit-transition: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
-  }
-  
-  .hamburger, .hamburgerActive {
-    display: block;
-    cursor: pointer;
-    margin: 1.5rem;
-  }
-  
-  .bar {
-    display: block;
-    width: 50px;
-    height: 6px;
-    margin: 10px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: var(--clr-headings);
-  }
-  
-  .hamburgerActive .bar:nth-child(2) {
-    opacity: 0;
-  }
-  
-  .hamburgerActive .bar:nth-child(1) {
-    -webkit-transform: translateY(16px) rotate(45deg);
-    transform: translateY(16px) rotate(45deg);
-  }
-  
-  .hamburgerActive .bar:nth-child(3) {
-    -webkit-transform: translateY(-16px) rotate(-45deg);
-    transform: translateY(-16px) rotate(-45deg);
-  }
-  
-  .navMenu {
-    position: fixed;
-    right: -100%;
-    top: 14vh;
-    flex-direction: column;
-    background-color: transparent;
-    background-image: linear-gradient(var(--clr-nav), var(--clr-purple));
-    width: 100%;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-    text-align: center;
-    transition: 0.3s;
-    box-shadow: var(--text-shadow);
-    z-index: 10;
-    padding-bottom: 10vh;
-  }
-  
-  .navMenu.active {
-    right: 0;
-  }
-  
-  .navMenu li {
-    margin: 2rem 0;
-  }
+  display: flex;
+  width: 100%;
+  height: 14vh;
+  justify-content: flex-end;
+  align-items: center;
+  box-shadow: var(--text-shadow);
+  background-color: var(--clr-purple);
+}
 
+.navLink {
+  font-family: var(--ff-);
+  color: #ffffff;
+  font-size: 2rem;
+  padding: 0 1rem;
+  text-align: center;
+  text-shadow: var(--text-shadow);
+}
 
+.navLink:hover {
+  color: var(--clr-headings);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.hamburger,
+.hamburgerActive {
+  display: block;
+  cursor: pointer;
+  margin: 1.5rem;
+}
+
+.bar {
+  display: block;
+  width: 50px;
+  height: 6px;
+  margin: 10px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: var(--clr-headings);
+}
+
+.hamburgerActive .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburgerActive .bar:nth-child(1) {
+  -webkit-transform: translateY(16px) rotate(45deg);
+  transform: translateY(16px) rotate(45deg);
+}
+
+.hamburgerActive .bar:nth-child(3) {
+  -webkit-transform: translateY(-16px) rotate(-45deg);
+  transform: translateY(-16px) rotate(-45deg);
+}
+
+.navMenu {
+  position: fixed;
+  right: -100%;
+  top: 14vh;
+  flex-direction: column;
+  background-color: transparent;
+  background-image: linear-gradient(var(--clr-purple), var(--clr-nav));
+  width: 100%;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  text-align: center;
+  transition: 0.3s;
+  box-shadow: var(--text-shadow);
+  z-index: 10;
+  padding-bottom: 10vh;
+}
+
+.navMenu.active {
+  right: 0;
+}
+
+.navMenu li {
+  margin: 2rem 0;
+}
 
 /*MEDIA QUERIES*/
 
-
 /* Medium Devices, Desktops */
 @media (min-width: 992px) {
-
   .navMenu {
     position: relative;
     display: flex;
@@ -104,18 +101,14 @@
     margin: 0;
   }
 
-  .hamburger, .hamburgerActive {
+  .hamburger,
+  .hamburgerActive {
     display: none;
   }
-
-  .mainNav {
-    height: 14vh;
-  }
-
 }
 
 /* Large Devices, Wide Screens */
-@media (min-width: 1200px) {  
+@media (min-width: 1200px) {
   .navLink {
     font-size: 2.2rem;
   }
