--- a/styles/LandingPage.module.css
+++ b/styles/LandingPage.module.css
@@ -31,6 +31,10 @@
   .landingPage {
     background-size: 60%;
   }
+  .headerButtons {
+    width: 50%;
+    margin: auto;
+  }
 }
 
 /* Small Devices, Tablets */
@@ -58,6 +62,7 @@
     }
     .headerButtons {
       flex-direction: row;
+      width: 100%;
     }
 }
 
