--- a/styles/globals.css
+++ b/styles/globals.css
@@ -160,7 +160,7 @@ ul {
 #prestations {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
 }
 
 .grid-item {
