footer color changed, text updated for massage bébé and qui suis je

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
   display: flex;
-  background-color: var(--clr-purple);
+  background-color: #8A4F92;
   margin-top: 5vh;
   height: 8vh;
   color: #ffffff;
