--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -60,7 +60,7 @@
   top: 14vh;
   flex-direction: column;
   background-color: transparent;
-  background-image: linear-gradient(var(--clr-purple), var(--clr-nav));
+  background-image: linear-gradient(var(--clr-purple) 70%, var(--clr-nav));
   width: 100%;
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
@@ -68,7 +68,7 @@
   transition: 0.3s;
   box-shadow: var(--text-shadow);
   z-index: 50;
-  padding-bottom: 10vh;
+  padding-bottom: 50vh;
 }
 
 .navMenu.active {
